--- a/Eagle/Eagle.Web/Eagle.Web.csproj
+++ b/Eagle/Eagle.Web/Eagle.Web.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Eagle\Eagle.csproj" />
+  </ItemGroup>
+
 </Project>
