--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Eagle/Eagle.Web/bin/
 Eagle/Eagle.Web/obj/
 Eagle/Eagle/bin/
 Eagle/Eagle/obj/
+Eagle/Feature.Infrastructure/obj/
+Eagle/Feature.Infrastructure/bin/
