--- a/Eagle/Eagle/Eagle.csproj
+++ b/Eagle/Eagle/Eagle.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="NUnit.Engine" Version="3.10.0" />
+    <PackageReference Include="NUnit.Engine.Api" Version="3.10.0" />
+  </ItemGroup>
+
 </Project>
