Added a test play ground project

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Eagle/Eagle/bin/
 Eagle/Eagle/obj/
 Eagle/Feature.Infrastructure/obj/
 Eagle/Feature.Infrastructure/bin/
+Eagle/PlayGround/bin/
+Eagle/PlayGround/obj/
