--- a/Eagle/PlayGround/PlayGround.csproj
+++ b/Eagle/PlayGround/PlayGround.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="input.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="input.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
