--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Eagle/Feature.Infrastructure/obj/
 Eagle/Feature.Infrastructure/bin/
 Eagle/PlayGround/bin/
 Eagle/PlayGround/obj/
+Eagle/Eagle.TestNode1/bin/Debug/
+Eagle/Eagle.TestNode1/obj/
