--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Eagle/PlayGround/bin/
 Eagle/PlayGround/obj/
 Eagle/Eagle.TestNode1/bin/Debug/
 Eagle/Eagle.TestNode1/obj/
+Eagle/Eagle.Dashboard/bin/
+Eagle/Eagle.Dashboard/obj/
