Added mechanism to run empty string

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Eagle/Eagle.TestNode1/bin/Debug/
 Eagle/Eagle.TestNode1/obj/
 Eagle/Eagle.Dashboard/bin/
 Eagle/Eagle.Dashboard/obj/
+Eagle/Eagle.TestNode1/bin/
