--- a/Eagle/EagleUI/package.json
+++ b/Eagle/EagleUI/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-splitter-layout": "^4.0.0",
+    "react-timeago": "^4.4.0",
     "styled-components": "^4.3.1"
   },
   "scripts": {
