Added new node project

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Eagle/Eagle.TestNode1/obj/
 Eagle/Eagle.Dashboard/bin/
 Eagle/Eagle.Dashboard/obj/
 Eagle/Eagle.TestNode1/bin/
+Eagle/Eagle.TestNode2/bin/
+Eagle/Eagle.TestNode2/obj/
