Created Eagle project

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ Eagle/Eagle.Dashboard/obj/
 Eagle/Eagle.TestNode1/bin/
 Eagle/Eagle.TestNode2/bin/
 Eagle/Eagle.TestNode2/obj/
+Eagle/Eagle.Contract/obj/
+Eagle/Eagle.Contract/bin/
