--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ Eagle/Eagle.TestNode2/bin/
 Eagle/Eagle.TestNode2/obj/
 Eagle/Eagle.Contract/obj/
 Eagle/Eagle.Contract/bin/
+Eagle/Eagle.Communication.Contract/bin/
+Eagle/Eagle.Communication.Contract/obj/
