--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Eagle/Eagle.Contract/obj/
 Eagle/Eagle.Contract/bin/
 Eagle/Eagle.Communication.Contract/bin/
 Eagle/Eagle.Communication.Contract/obj/
+Eagle/Eagle.WebTemp/obj/
+Eagle/Eagle.WebTemp/bin/Debug/
