--- a/Eagle/Eagle.TestNode2/Eagle.TestNode2.csproj
+++ b/Eagle/Eagle.TestNode2/Eagle.TestNode2.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Eagle.WebTemp\Eagle.WebTemp.csproj" />
     <ProjectReference Include="..\Eagle\Eagle.csproj" />
   </ItemGroup>
 
