--- a/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
+++ b/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Eagle.WebTemp\Eagle.WebTemp.csproj" />
     <ProjectReference Include="..\Eagle\Eagle.csproj" />
     <ProjectReference Include="..\Feature.Infrastructure\Feature.Infrastructure.csproj" />
   </ItemGroup>
