--- a/Eagle/Eagle.Dashboard/Eagle.Dashboard.csproj
+++ b/Eagle/Eagle.Dashboard/Eagle.Dashboard.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Eagle.WebTemp\Eagle.WebTemp.csproj" />
     <ProjectReference Include="..\Eagle\Eagle.csproj" />
   </ItemGroup>
 
