Restructuring the project

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Eagle/Eagle.Communication.Contract/bin/
 Eagle/Eagle.Communication.Contract/obj/
 Eagle/Eagle.WebTemp/obj/
 Eagle/Eagle.WebTemp/bin/Debug/
+Eagle/Eagle.AzureFunction/obj/
+Eagle/Eagle.AzureFunction/bin/
