--- a/Eagle/Eagle.Communication.Contract/Eagle.Communication.Contract.csproj
+++ b/Eagle/Eagle.Communication.Contract/Eagle.Communication.Contract.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Eagle.Contract\Eagle.Contract.csproj" />
+    <ProjectReference Include="..\Eagle\Eagle.csproj" />
+  </ItemGroup>
+
 </Project>
