Implemented some dummy azure function

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Eagle/Eagle.WebTemp/obj/
 Eagle/Eagle.WebTemp/bin/Debug/
 Eagle/Eagle.AzureFunction/obj/
 Eagle/Eagle.AzureFunction/bin/
+Eagle/Eagle.AzureFunctions/bin/
+Eagle/Eagle.AzureFunctions/obj/
