--- a/Eagle/Eagle.Contract/Eagle.Contract.csproj
+++ b/Eagle/Eagle.Contract/Eagle.Contract.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>WonderTools.Eagle.Contract</RootNamespace>
+    <AssemblyName>WonderTools.Eagle.Contract</AssemblyName>
   </PropertyGroup>
 
 </Project>
