--- a/Eagle/Eagle.Contract/Eagle.Contract.csproj
+++ b/Eagle/Eagle.Contract/Eagle.Contract.csproj
@@ -5,8 +5,9 @@
     <RootNamespace>WonderTools.Eagle.Contract</RootNamespace>
     <AssemblyName>WonderTools.Eagle.Contract</AssemblyName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/WonderTools/eagle</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
   </PropertyGroup>
 
 </Project>
