--- a/Eagle/Eagle.Communication.Contract/Eagle.Communication.Contract.csproj
+++ b/Eagle/Eagle.Communication.Contract/Eagle.Communication.Contract.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>WonderTools.Eagle.Communication.Contract</AssemblyName>
+    <RootNamespace>WonderTools.Eagle.Communication.Contract</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
