--- a/Eagle/Eagle/Eagle.csproj
+++ b/Eagle/Eagle/Eagle.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>WonderTools.Eagle</RootNamespace>
+    <AssemblyName>WonderTools.Eagle</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
