--- a/Eagle/Eagle.Communication.Contract/Eagle.Communication.Contract.csproj
+++ b/Eagle/Eagle.Communication.Contract/Eagle.Communication.Contract.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Eagle.Contract\Eagle.Contract.csproj" />
-    <ProjectReference Include="..\Eagle\Eagle.csproj" />
+    <PackageReference Include="WonderTools.Eagle" Version="1.0.0" />
+    <PackageReference Include="WonderTools.Eagle.Contract" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
