--- a/Eagle/Eagle.AzureFunctions/Eagle.AzureFunctions.csproj
+++ b/Eagle/Eagle.AzureFunctions/Eagle.AzureFunctions.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>WonderTools.Eagle.AzureFunctions</RootNamespace>
+    <AssemblyName>WonderTools.Eagle.AzureFunctions</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
