--- a/Eagle/Eagle.AzureFunctions/Eagle.AzureFunctions.csproj
+++ b/Eagle/Eagle.AzureFunctions/Eagle.AzureFunctions.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
