--- a/Eagle/FunctionApp1/FunctionApp1.csproj
+++ b/Eagle/FunctionApp1/FunctionApp1.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
@@ -10,6 +10,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Eagle.AzureFunctions\Eagle.AzureFunctions.csproj" />
+    <ProjectReference Include="..\Feature.Infrastructure\Feature.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
