--- a/Eagle/Eagle.TestNode2/Eagle.TestNode2.csproj
+++ b/Eagle/Eagle.TestNode2/Eagle.TestNode2.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="WonderTools.Eagle.Communication.Contract" Version="1.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
