--- a/Eagle/Eagle.AzureFunctions/Eagle.AzureFunctions.csproj
+++ b/Eagle/Eagle.AzureFunctions/Eagle.AzureFunctions.csproj
@@ -14,7 +14,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="WonderTools.Eagle.Communication.Contract" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Eagle.Communication.Contract\Eagle.Communication.Contract.csproj" />
+    <ProjectReference Include="..\Eagle.Contract\Eagle.Contract.csproj" />
+    <ProjectReference Include="..\Eagle\Eagle.csproj" />
   </ItemGroup>
 
   <ItemGroup>
