--- a/Eagle/Eagle.Dashboard/Eagle.Dashboard.csproj
+++ b/Eagle/Eagle.Dashboard/Eagle.Dashboard.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Eagle.Communication.Contract\Eagle.Communication.Contract.csproj" />
     <ProjectReference Include="..\Eagle.Contract\Eagle.Contract.csproj" />
-    <ProjectReference Include="..\Eagle\Eagle.csproj" />
+    <ProjectReference Include="..\Eagle\Eagle.Core.csproj" />
   </ItemGroup>
 
 </Project>
