--- a/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
+++ b/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Eagle.Communication.Contract\Eagle.Communication.Contract.csproj" />
-    <ProjectReference Include="..\Eagle\Eagle.csproj" />
+    <ProjectReference Include="..\Eagle\Eagle.Core.csproj" />
     <ProjectReference Include="..\Feature.Infrastructure\Feature.Infrastructure.csproj" />
   </ItemGroup>
 
