--- a/Eagle/Eagle/Eagle.Core.csproj
+++ b/Eagle/Eagle/Eagle.Core.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>WonderTools.Eagle</RootNamespace>
-    <AssemblyName>WonderTools.Eagle</AssemblyName>
+    <RootNamespace>WonderTools.Eagle.Core</RootNamespace>
+    <AssemblyName>WonderTools.Eagle.Core</AssemblyName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
