--- a/Eagle/FunctionApp1/FunctionApp1.csproj
+++ b/Eagle/FunctionApp1/FunctionApp1.csproj
@@ -7,9 +7,10 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="WonderTools.Eagle.AzureFunctions" Version="1.0.1" />
-    <PackageReference Include="WonderTools.Eagle.Communication.Contract" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Eagle.AzureFunctions\Eagle.AzureFunctions.csproj" />
+    <ProjectReference Include="..\Eagle.Communication.Contract\Eagle.Communication.Contract.csproj" />
     <ProjectReference Include="..\Feature.Infrastructure\Feature.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
