--- a/Eagle/FunctionApp1/FunctionApp1.csproj
+++ b/Eagle/FunctionApp1/FunctionApp1.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Eagle.AzureFunctions\Eagle.Http.csproj" />
+    <ProjectReference Include="..\Eagle.AzureFunctions\Eagle.Http.NUnit.csproj" />
     <ProjectReference Include="..\Eagle.Communication.Contract\Eagle.Http.Contract.csproj" />
     <ProjectReference Include="..\Feature.Infrastructure\Feature.Infrastructure.csproj" />
   </ItemGroup>
