--- a/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
+++ b/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
@@ -18,7 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Eagle.AzureFunctions\Eagle.Http.NUnit.csproj" />
     <ProjectReference Include="..\Eagle.Communication.Contract\Eagle.Http.Contract.csproj" />
-    <ProjectReference Include="..\Eagle\Eagle.Core.csproj" />
+    <ProjectReference Include="..\Eagle\Eagle.NUnit.csproj" />
     <ProjectReference Include="..\Feature.Infrastructure\Feature.Infrastructure.csproj" />
   </ItemGroup>
 
