--- a/Eagle/Eagle/Eagle.NUnit.csproj
+++ b/Eagle/Eagle/Eagle.NUnit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
     <RootNamespace>WonderTools.Eagle.NUnit</RootNamespace>
     <AssemblyName>WonderTools.Eagle.NUnit</AssemblyName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
