--- a/Eagle/Eagle.Contract/Eagle.Contract.csproj
+++ b/Eagle/Eagle.Contract/Eagle.Contract.csproj
@@ -13,6 +13,7 @@
     <Copyright>Copyright ©2019 WonderTools</Copyright>
     <RepositoryUrl>https://github.com/WonderTools/eagle</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
 </Project>
