--- a/Eagle/Eagle/Eagle.NUnit.csproj
+++ b/Eagle/Eagle/Eagle.NUnit.csproj
@@ -8,6 +8,11 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/WonderTools/Eagle</PackageProjectUrl>
+    <Authors>WonderTools</Authors>
+    <Copyright>Copyright ©2019 WonderTools</Copyright>
+    <RepositoryUrl>https://github.com/WonderTools/Eagle</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
