--- a/Eagle/Eagle.Communication.Contract/Eagle.Http.Contract.csproj
+++ b/Eagle/Eagle.Communication.Contract/Eagle.Http.Contract.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Eagle.Contract\Eagle.Contract.csproj" />
+    <PackageReference Include="WonderTools.Eagle.Contract" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
