--- a/Eagle/Eagle/Eagle.NUnit.csproj
+++ b/Eagle/Eagle/Eagle.NUnit.csproj
@@ -26,10 +26,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="NUnit.Engine" Version="3.10.0" />
     <PackageReference Include="NUnit.Engine.Api" Version="3.10.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Eagle.Contract\Eagle.Contract.csproj" />
+    <PackageReference Include="WonderTools.Eagle.Contract" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
