--- a/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
+++ b/Eagle/Eagle.TestNode1/Eagle.TestNode1.csproj
@@ -13,12 +13,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="WonderTools.Eagle.Http.NUnit" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Eagle.AzureFunctions\Eagle.Http.NUnit.csproj" />
-    <ProjectReference Include="..\Eagle.Communication.Contract\Eagle.Http.Contract.csproj" />
-    <ProjectReference Include="..\Eagle\Eagle.NUnit.csproj" />
     <ProjectReference Include="..\Feature.Infrastructure\Feature.Infrastructure.csproj" />
   </ItemGroup>
 
